EAR-39: Add the validation code

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -4,7 +4,7 @@
 # Logo source:
 # https://commons.wikimedia.org/wiki/File:Terrestrial_globe.svg
 
-title: Machine Learning for CrIS XCO
+title: CrIS XCO ML
 author: Swift Software Group
 copyright: "2024"
 logo: logo.svg
